fix: change notebook api to return only user notebooks
